@@ -4,6 +4,9 @@ Changelog
 1.0b4 (unreleased)
 ------------------
 
+* Rename 'publish comment' to 'approve comment'. This fixes #1608470.
+  [timo]
+  
 * Show a warning in the moderation view if the moderation workflow is disabled.
   [timo]
 
